--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -18,7 +18,7 @@ permissions:
         type: string
 jobs:
   test:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.37-uv
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.48.1-pre3
     with:
       target: ${{ github.event.inputs.target || 'petstore' }}
     secrets:
