--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -25,7 +25,7 @@ generation:
     generateNewTests: true
     skipResponseBodyAssertions: false
 python:
-  version: 0.0.3
+  version: 0.0.4
   additionalDependencies:
     dev: {}
     main: {}
@@ -56,7 +56,7 @@ python:
   methodArguments: infer-optional-args
   moduleName: ""
   outputModelSuffix: output
-  packageManager: uv
+  packageManager: poetry
   packageName: petstore
   pytestFilterWarnings: []
   pytestTimeout: 0
